# bank-payment

./: .copier-answers.yml  .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .pylintrc-mandatory  .travis.yml  README.md  __init__.py  account_banking.py  account_banking_demo.xml  account_banking_import_wizard.xml  oca_dependencies.txt  requirements.txt  sepa.py  test-requirements.txt
account_bank_statement_import/: __openerp__.py  account_bank_statement_import.py  account_bank_statement_import_view.xml
account_bank_statement_import_ofx/: __openerp__.py  account_bank_statement_import_ofx.py
account_bank_statement_import_qif/: __openerp__.py  account_bank_statement_import_qif.py
account_bank_statement_tax/: __openerp__.py
account_banking/: __init__.py  __openerp__.py  __terp__.py  account_banking.py  account_banking_demo.xml  account_banking_payment_wizard.xml  account_banking_view.xml  account_banking_workflow.xml  bank_import_transaction.py  bank_statement_monkeypatch.py  banking_import_transaction.py  browse_record.py  record.py  res_bank.py  res_partner.py  res_partner_bank.py  struct.py
account_banking_aggregate_payment/: __openerp__.py
account_banking_camt/: __init__.py  __openerp__.py  camt.py
account_banking_fi_patu/: __init__.py  __openerp__.py  __terp__.py  parser.py  patu.py
account_banking_fr_lcr/: README.rst  __init__.py  __openerp__.py  account_banking_lcr.py  account_banking_lcr_view.xml  lcr_demo.xml
account_banking_hr_rba/: __init__.py  __openerp__.py  rba.py
account_banking_iban_lookup/: __init__.py  __openerp__.py  online.py  urlagent.py
account_banking_make_deposit/: Change Log.txt  README.rst  __init__.py  __manifest__.py  __openerp__.py  account_banking_make_deposit.py  account_move_line.py  account_move_line_view.xml  deposit_ticket_report.xml
account_banking_mandate/: README.rst  __init__.py  __manifest__.py  __openerp__.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+3461 files in other folders)
