[project]
name = "odoo-addons-oca-bank-payment"
version = "17.0.20240325.0"
dependencies = [
    "odoo-addon-account_banking_mandate>=17.0dev,<17.1dev",
    "odoo-addon-account_banking_pain_base>=17.0dev,<17.1dev",
    "odoo-addon-account_banking_sepa_credit_transfer>=17.0dev,<17.1dev",
    "odoo-addon-account_payment_mode>=17.0dev,<17.1dev",
    "odoo-addon-account_payment_order>=17.0dev,<17.1dev",
    "odoo-addon-account_payment_partner>=17.0dev,<17.1dev",
    "odoo-addon-account_payment_purchase>=17.0dev,<17.1dev",
    "odoo-addon-account_payment_sale>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
